--- a/day4 -2.ipynb
+++ b/day4 -2.ipynb
@@ -32,6 +32,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter First Number: 29\n",
+      "Enter Second Number: 3\n",
+      "87\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3#\n",
+    "num1 = int(input(\"Enter First Number: \"))\n",
+    "num2 = int(input(\"Enter Second Number: \"))\n",
+    "if num1 - num2 > 25: \n",
+    "\tprint(num1 * num2)\n",
+    "else:\n",
+    "\tprint(num1 / num3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition of two complex numbers :  (7-4j)\n",
+      "Subtraction of two complex numbers :  (1+10j)\n",
+      "Multiplication of two complex numbers :  (33-19j)\n",
+      "Division of two complex numbers :  (-0.15517241379310348+0.6379310344827587j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1#\n",
+    "print(\"Addition of two complex numbers : \",(4+3j)+(3-7j))\n",
+    "print(\"Subtraction of two complex numbers : \",(4+3j)-(3-7j))\n",
+    "print(\"Multiplication of two complex numbers : \",(4+3j)*(3-7j))\n",
+    "print(\"Division of two complex numbers : \",(4+3j)/(3-7j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "the arithmetic operations on complex numbers in python is possible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#2# the built in funnction range() generates the integer numbers between the given start integer to the stop integer, i.e, it returns a range object. using for loop, we can iterate over a sequence of numbers produced by the range() function.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python range() example\n",
+      "Get numbers from range 0 to 6\n",
+      "0, 1, 2, 3, 4, 5, "
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Python range() example\")\n",
+    "print(\"Get numbers from range 0 to 6\")\n",
+    "for i in range(6):\n",
+    "    print(i, end=', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get numbers from range 0 to 10\n",
+      "0, Enter number from list 7\n",
+      "1, "
+     ]
+    }
+   ],
+   "source": [
+    "#4#\n",
+    "\n",
+    "print(\"Get numbers from range 0 to 10\")\n",
+    "for i in range(10):\n",
+    "    print(i, end=', ')\n",
+    "    num1 = int(input(\"Enter number from list \"))\n",
+    "    if num1%2 == 0:\n",
+    "        print(num1**2 - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
