--- a/day 6.ipynb
+++ b/day 6.ipynb
@@ -2,44 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "dj@gmail.com\n",
-      "gmail"
-     ]
+     "name": "stdout",
+     "text": "google\n"
     }
    ],
    "source": [
     "#1#\n",
     "ip=input()\n",
-    "x=ip.index(\"@\")\n",
-    "print(ip[x+1:len(ip)-4],end='')\n"
+    "print(ip.split('@')[1].split('.')[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "enter data to sort1234,6\n",
-      "Sorted data are  1234 6\n"
-     ]
+     "name": "stdout",
+     "text": "['bag', 'hello', 'without', 'world']\n"
     }
    ],
    "source": [
     "#2#\n",
-    "items=[x for x in input(\"enter data to sort\").split(',')]\n",
-    "items.sort()\n",
-    "print (\"Sorted data are \",' '.join(items))"
+    "items=input(\"enter data to sort \")\n",
+    "print (sorted(items.split(',')))"
    ]
   },
   {
@@ -222,41 +218,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "The repeating element is 5\n",
-      "and the missing element is 1\n"
-     ]
+     "name": "stdout",
+     "text": "5\n"
     }
    ],
    "source": [
-    " \n",
-    "# and the missing elements \n",
-    "\n",
-    "def printTwoElements( arr, size): \n",
-    "\tfor i in range(size): \n",
-    "\t\tif arr[abs(arr[i])-1] > 0: \n",
-    "\t\t\tarr[abs(arr[i])-1] = -arr[abs(arr[i])-1] \n",
-    "\t\telse: \n",
-    "\t\t\tprint(\"The repeating element is\", abs(arr[i])) \n",
-    "\t\t\t\n",
-    "\tfor i in range(size): \n",
-    "\t\tif arr[i]>0: \n",
-    "\t\t\tprint(\"and the missing element is\", i + 1) \n",
-    "\n",
-    "# Driver program to test above function */ \n",
-    "arr = [7, 3, 4, 5, 5, 6, 2] \n",
-    "n = len(arr) \n",
-    "printTwoElements(arr, n) \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "x=input()\n",
+    "x=x.split(' ')\n",
+    "tot=0\n",
+    "for a in range(0,len(x)):\n",
+    "\ttot+=int(x[a])\n",
+    "y=sum(range(1,len(x)+2))\n",
+    "print(y-tot)"
    ]
   },
   {
